# CMakeDemo

./: CMakeLists.txt  MyClass.cpp  demo.cpp
include/: MyClass.h
